--- a/App1/App1/Resources/layout/Main.axml
+++ b/App1/App1/Resources/layout/Main.axml
@@ -9,9 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="355.5dp"
         android:id="@+id/txtQuestion" />
-    <TextView
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txtAnswer" />
