--- a/App1/App1/Resources/layout/Main.axml
+++ b/App1/App1/Resources/layout/Main.axml
@@ -3,20 +3,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <TextView
-        android:text="Medium Text"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:layout_width="match_parent"
-        android:layout_height="355.5dp"
-        android:id="@+id/txtQuestion" />
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAnswer" />
-    <Button
-        android:text="Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/button1"
-        android:clickable="true" />
+  <TextView
+      android:text="Medium Text"
+      android:textAppearance="?android:attr/textAppearanceMedium"
+      android:layout_width="match_parent"
+      android:layout_height="355.5dp"
+      android:id="@+id/txtQuestion" />
+  <EditText
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/txtAnswer" />
+  <Button
+       android:text="Button"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/button1" />
 </LinearLayout>
